syntax = "proto3";

package user;

option go_package = "wallet/proto_files/user";

message User {
	int64 userId = 1;
	string fullName = 2;
	string username = 3;
	double totalMoney = 4;
}

message PostUser {
	string fullname = 1;
	string username = 2;
	string password  = 3;
}

message Identificator {
	string username = 1;	
	string password = 2;
}

message ListOfPostedUsersReq {}

message ListOfPostedUsersRes {

	repeated PostUser allUsers = 1;
}

service UserSevice {

	rpc PostNewUser(PostUser) returns (User) {} 
	rpc GetUserBasicInfo(Identificator) returns (User) {} 
	rpc GetUsersList(ListOfPostedUsersReq) returns (ListOfPostedUsersRes) {} 
}
